load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "execute_code.go",
        "imports.go",
        "main.go",
    ],
    cgo = True,
    importpath = "github.com/prysmaticlabs/prysm/wasm",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_sirupsen_logrus//:go_default_library",
        "@com_github_wasmerio_go_ext_wasm//wasmer:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["execute_code_test.go"],
    embed = [":go_default_library"],
    deps = ["@in_gopkg_yaml_v2//:go_default_library"],
)
