load("@prysm//tools/go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "client.go",
        "errors.go",
        "options.go",
    ],
    importpath = "github.com/prysmaticlabs/prysm/v4/api/client",
    visibility = ["//visibility:public"],
    deps = ["@com_github_pkg_errors//:go_default_library"],
)
